# PCK-Bottle

./: .gitignore  .mgrepignore  README.md  README.ru.md  README.zh.md  RELEASE.md
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/pck-core/: Cargo.toml
crates/pck-core/src/: lib.rs
docs/superpowers/plans/: 2026-06-07-native-macos-pck-bottle-migration.md
docs/superpowers/specs/: 2026-06-07-native-macos-pck-bottle-design.md
legacy/: README.md  package-lock.json  package.json
legacy/src/: app.js  i18n.js  index.html  quasar-progress.js  styles.css
legacy/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
legacy/src-tauri/capabilities/: default.json
legacy/src-tauri/icons/: icon.icns
legacy/src-tauri/permissions/autogenerated/: cleanup_pck_workspace.toml  open_game_path_dialog.toml  open_pck_workspace.toml  repack_pck.toml  scan_paths.toml
legacy/src-tauri/src/: lib.rs  main.rs
legacy/src/core/: file-workflow.js
legacy/tests/: core.test.mjs  i18n.test.mjs  security.test.mjs
macos/PCKBottle/: Package.swift  README.md
macos/PCKBottle/Assets/: PCKBottle.icns
macos/PCKBottle/Sources/PCKBottleApp/: AppDelegate.swift  BrowserPanels.swift  BrowserUI.swift  ChangesPanel+Outline.swift  ChangesPanel.swift  DropViews.swift  EditorUI.swift  Localization.swift  Models.swift  PackageContents+Commands.swift  PackageContents+Outline.swift  PackageContents+Packing.swift  PackageContents+Projection.swift  PackageContents.swift  PckCoreClient.swift  Support.swift  UpdateChecker.swift  main.swift  (+1 more)
macos/PCKBottle/scripts/: build-app.sh  make-dmg.sh
